public/css/site.css
h5, p{
    margin: 0;
    padding: 0;
}
#fb-root{
    margin-top:70px;
}
body{
    background-color:#E3F2F7;
    overflow-x: hidden;
}
.middle-page{
    margin:0 auto;
    max-width:750px;
}
.middle-page-status{
    margin: 0 auto;
    max-width: 600px;
}
.middle-page-status h5, .status-description{
    padding-left: 10px;
}
.middle-page .row, .middle-page .well{
    max-width:750px;
}
.home-info{
    color: #2e42a7;
    font-size: 1.5em;
    padding-left: 10px;
}
.image-link-container img{
    width: 100%;
    height:auto;
    margin-bottom: 20px;
}
.content{
    padding-left:20px;
}
.description{
    font-size:1.3em;
    color:#2fa4e7;
}
.message{
    line-height:20px;
}
iframe{
    width:480px;
}
.fb-action-row{
    margin:10px 2px;
    cursor:pointer;
}
.fb-action{
    margin-left:5px;
}
.comment-section{
    margin-top:10px;
}

.break-word {
  word-wrap: break-word;
}

.show-section {
    width: 800px;
    margin: 0 auto;
}

.show-button {
    float: left;
    cursor: pointer;
    margin-right: 20px;
    color: #2fa4e7;
}

.likes-button {
    cursor: pointer;
    color: #2fa4e7;
}

.likes-button:hover {
    color: black;
}

.show-button:hover {
    color: black;
}

a.user-acc {
    position: fixed;
    right: 0;
    top: 0;
    z-index: 9999999999;
    margin-top: 10px;
    margin-right: 50px;
    font-size: 2em;
    text-decoration: none;
    color: #fff;
}

a.user-acc:hover {
    color: #317EAC;
}
.img-modal{
    display:block;
    margin: 0 auto;
    max-width:550px;
    max-height:500px;
}

.user-menu {
    width: 158px;
    margin-right: 50px;
    color: white;
    padding: 15px;
}

.user-menu:hover {
    background-color: #178ACC;
}

.user-dropdown {
    background-color: #A9A9AA;
    margin-top: 15px;
    margin-right: -47px;
}

.notification-bell {
    height: 30px;
    width: 30px;
}

.notification-icon {
    margin-right: 20px;
    margin-top: 10px;
}

.notif-box {
    margin-top: 10px;
    width: 400px;
    height: 400px;
    overflow-y: auto;
    background-color: #A9A9AA;
}

.notif-box li {

    margin-bottom: 10px;
}

.notif-container {

    padding: 5px;
    margin-left: 5px;
    margin-right: 5px;
    height: 100px;
    border-top: 1px solid #36A7E8;
    border-bottom: 1px solid #36A7E8;
    border-radius: 5px;
    background-color:#eeeeee;
}

.notif-container:hover {

    background-color: #D8D8D8;
}

.notif-time {

    color: gray;
    margin-top: 10px;
    font-style: italic;
}
.updateStatus{
    margin-top:70px;
    position: fixed;
}

.comments-section {
    max-height: 200px;
    overflow-y: scroll;
}
.liked{
    border: 2px solid #2fa4e7;
    border-radius: 5px;
}
@media (max-width: 1280px) {

    .updateStatus {
        margin-right: 10%;
        width: 20%;
    }


    .updateStatus textarea {
        width: 80%;
    }

    .updateStatus .enlarge-button {
        margin-left: -40px;
    }
}

@media (max-width: 1000px) {

    .home-photo {
        margin-top: 10px;
    }

    .sort-by-label {
        text-align: center;
        margin-right: 40%;
    }

    .updateStatus {
        position: relative;
        margin-top: -10px;
        margin-right: inherit;
        width: inherit;
    }

    .updateStatus textarea {
        width: 100%;
    }

    .updateStatus .enlarge-button {
        margin-left: inherit;
    }
  
    .fb-box {

        width: 600px;
        margin-left: 25%;
    }

    .fb-box div {
        float: left;
        margin-right: 20px;
    }

    .show-section {
        margin-left: 25%;
    }

    .navbar-header {
        float: left;
    }

    .navbar-header button {
        position: fixed;
        top: 5px;
        right: 5px;
        margin: 0;
    }

    .navbar-right {
        float: left;
        margin-right: 5px;
    }

    .navbar-right:not(.bell) {
        margin-left: 5px;
    }

    .bell {
        margin-top: -3px;
        margin-left: 2px;
    }

    .updateStatus {
        margin-left: 10%;
    }

    .enlarge-button {
        width: 100%;        
    }

    .home-info{
        padding: 20px;
    }

    .login-btn {
        margin-top: 50px;
    }

    .user-menu {
        margin-right: -10px;
    }

}

@media (max-width: 700px) {

    .user-menu {
        width: 120px;
        padding: 5px;
    }

    .user-menu .user-dropdown a {
        width: 150px;
        text-align: left;
    }

    .user-dropdown {
        margin-left: -25px;
    }

    .user-dropdown a {
        border-radius: 50%;
    }

    .user-menu .caret {
        display: none;
    }
}

@media (max-width: 500px) {
  
    .fb-box {

        width: 400px;
        margin-left: 0px;
    }

    .fb-box div {
        float: left;
        margin-right: 20px;
        width: 400px;
    }

    .show-section {
        margin-left: 12%;
    }

    .likes-section {
        padding-top: 20px;
    }

}

